<resources>
    <string name="app_name">AndroidLayout</string>
    <string name="btnFirst">First activity</string>
    <string name="btnSecond">Second activity</string>
    <string name="btnThird">Third activity</string>
    <string name="btnFourth">Fourth activity</string>
    <string name="btnSendBC">Send</string>
    <string name="btnSumText">Sum</string>
    <string name="btnProdText">Product</string>
</resources>
