<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">
    <TextView
            android:text="Third Activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView"/>
    <Button
            android:text="@string/btnFirst"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnThirdToFirst"/>
    <Button
            android:text="@string/btnSecond"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnThirdToSecond"/>
    <Button
            android:text="@string/btnFourth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnThirdToFourth"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/msgFromSecondActivity"/>
</LinearLayout>