<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".FourthActivity">

    <TextView
            android:text="Fourth Activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"/>
    <Button
            android:text="@string/btnFirst"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnFourthToFirst"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            />
    <Button
            android:text="@string/btnSecond"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnFourthToSecond"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnFourthToFirst"
            />
    <Button
            android:text="@string/btnThird"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnFourthToThird"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnFourthToSecond"
            app:layout_constraintVertical_bias="0.032"/>
    <Button
            android:text="@string/btnProdText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnProd"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="40dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="188dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.198"/>
    <TextView
            tools:text="Product"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textProd"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/btnFourthToThird"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toEndOf="@+id/btnProd"
            android:layout_marginStart="8dp"
            app:layout_constraintVertical_bias="0.221" app:layout_constraintHorizontal_bias="0.21"/>
</android.support.constraint.ConstraintLayout>